sample_mongo_project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo
  namespace: nelly-v1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          -
            pathType: ImplementationSpecific
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
      host: nelly.com
